♿ Fix: Mejorar accesibilidad - aria-label en select y estructura de headings correcta

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <input type="text" id="searchInput" placeholder="Search for a country..." class="search-input">
                 </div>
                 <div class="filter-container">
-                    <select id="regionFilter" class="region-filter">
+                    <select id="regionFilter" class="region-filter" aria-label="Filter countries by region">
                         <option value="">Filter by Region</option>
                         <option value="Africa">Africa</option>
                         <option value="Americas">Americas</option>
